--- a/TP1/TP1 Source Code/.project
+++ b/TP1/TP1 Source Code/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FoundationsSP26</name>
+	<name>CSE360_Group2_TP1</name>
 	<comment></comment>
 	<projects>
 	</projects>
