Feat: create user update password

--- a/TP1/TP1 Source Code/bin/.gitignore
+++ b/TP1/TP1 Source Code/bin/.gitignore
@@ -1,2 +1,14 @@
+/passwordPopUpWindow/
+/applicationMain/
 /database/
+/guiAddRemoveRoles/
 /guiAdminHome/
+/guiFirstAdmin/
+/guiListAllUsers/
+/guiMultipleRoleDispatch/
+/guiNewAccount/
+/guiRole1/
+/guiRole2/
+/guiTools/
+/guiUserLogin/
+/guiUserUpdate/
